# isingchat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  credentials_git.txt  mypy.ini  pyproject.toml  tasks.py
.github/workflows/: tests.yml
Notebooks/: Analitic_expression_correlation_function_near_neighbor.ipynb  Correlation_function.ipynb  CurveFitNMinimize.nb  Generate_yaml_file.ipynb  Max_Cv.ipynb  One-dimensional_ising_chain.ipynb  Operate_RawData.ipynb  spec-heat-max-fitting_id-01.ipynb  specific-heat_16.ipynb  specific-heat_16.py
Notebooks/Comparision_fits/: Comparision_power-low_hurwitz.ipynb
Notebooks/Comparisons/: Comparison_regular-imperfect_p-2.ipynb  Comparison_regular_finite-finiteAllEigs_p-1.9.ipynb  Comparison_regular_infinite-finiteAllEigs.ipynb  Comparison_regular_infinite-finiteAllEigs_Tc.ipynb  Comparison_regular_infinite-finiteAllEigs_Tc_v2.ipynb  Comparison_regular_infinite-finiteAllEigs_p-1.9.ipynb  Comparison_regular_infinite-finite_p-2.ipynb
Notebooks/Configuraciones/: Generate_uncertainty.ipynb  Generate_yaml_file.ipynb  Generate_yaml_file_centrosym.ipynb  Generate_yaml_file_correlation_length.ipynb  Generate_yaml_file_correlation_length_centrosym.ipynb  Generate_yaml_file_eigenvalues.ipynb  Generate_yaml_file_finite-size.ipynb  Generate_yaml_file_finite-size_all_eigenvals.ipynb  Generate_yaml_file_finite-size_all_eigenvals_from-existing-file.ipynb  Generate_yaml_file_finite-size_all_eigenvals_using_extrapol_hurwitz.ipynb  Generate_yaml_file_imperfect_infinite-size.ipynb  Generate_yaml_file_infinite-size_using_extrapol_hurwitz.ipynb  Generate_yaml_file_p-1.1.ipynb  Generate_yaml_file_p-2.0.ipynb
Notebooks/Correlation_function/: Correlation function analysis.ipynb
Notebooks/Correlation_length/: Correlation length analysis.ipynb  Untitled.ipynb
Notebooks/DataConversion/: Convert Data.ipynb
Notebooks/Drafts/: Correlation function.ipynb  Draft to change vectors.ipynb  Eigenvalue analysis.ipynb  Finite_correlation_function.ipynb  Untitled.ipynb  code_experiment.ipynb  explore_eigenvals.ipynb
Notebooks/Experimentations/: ComportamientoSeries.ipynb  Convergence_Tc.ipynb  Extrapolation_log_log_adjust.ipynb  Finite_matrix.ipynb  Finite_size.ipynb  Graficas_analisis.ipynb  Graficas_comportamiento.ipynb  Power-law_behaviour.ipynb  ZetaFunction.ipynb  finite-size_Ising.ipynb  free_energy_finite-size_nv-2.ipynb  imperfect_Ising.ipynb  specific-heat_16.ipynb  specific-heat_16.py
Notebooks/External_mag_field/: Fit_hiperbolic_three_params-ExtMagField.ipynb  Fit_sqrt_log_3_params_h-1.ipynb  Fit_sqrt_log_h-1.ipynb  Graph_3D_Cv_and_Mag-suscept.ipynb  Join_max_cv_x.ipynb  Max_SpecificHeat_ExtMagField.ipynb  Max_Sucept_ExtMagField_h-1.ipynb  Numerical_value_nv-1.ipynb
Notebooks/Fits/: Fit_Conical_curve_Inv_Tc_vs_alpha.ipynb  Fit_all_tc.ipynb  Fit_extrapol_values.ipynb  Fit_extrapol_values_inv_log_2_params.ipynb  Fit_polynomial.ipynb  (+19 more)
scripts/: start-jupyterlab.ps1  start-jupyterlab.sh
tests/: test_ising.py  test_isingchat.py  test_time.py  test_utils.py
(+1431 files in other folders)
