[tool.poetry]
name = "isingchat"
version = "0.2.0"
description = ""
authors = ["Omar Abel Rodríguez-López <oarodriguez.mx@gmail.com>"]

packages = [
  { include = "isingchat", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
numpy = [
  { version = "^1.19.4", markers = "sys_platform != 'win32'" },
  # Pin numpy to 1.19.3 in Windows.
  # See https://developercommunity.visualstudio.com/content/problem/1207405/fmod-after-an-update-to-windows-2004-is-causing-a.html
  { version = "1.19.3", markers = "sys_platform == 'win32'" }
]
scipy = "^1.5.4"
matplotlib = "^3.3.3"
importlib-metadata = { version = "^3.3.0", python = "<3.8" }
numba = "^0.52.0"
click = "^7.1.2"
"ruamel.yaml" = "^0.16.12"
rich = "^9.8.1"
dask = {extras = ["bag"], version = "^2021.1.0"}
h5py = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
jupyter = "^1.0.0"
jupyterlab = "^2.2.9"
jupytext = "^1.7.1"

[tool.poetry.scripts]
isingchat = "isingchat.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

