[tool.poetry]
name = "isingchat"
version = "2021.1.0.dev0"
description = "A library to calculate the thermodynamic properties of a 1D Ising spin chain with beyond nearest-neighbor interactions."
authors = ["Omar Abel Rodríguez-López <oarodriguez.mx@gmail.com>"]

packages = [
  { include = "isingchat", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
# Avoid numpy 1.19.4, at least on Windows. Pin numpy to 1.19.3 in Windows.
# See https://developercommunity.visualstudio.com/content/problem/1207405/fmod-after-an-update-to-windows-2004-is-causing-a.html
numpy = ">=1.19.4"
scipy = ">=1.5.4"
matplotlib = ">=3.3.3"
importlib-metadata = { version = ">=3.3.0", python = "<3.8" }
numba = ">=0.52.0"
click = ">=7.1.2"
"ruamel.yaml" = ">=0.16.12"
rich = ">=9.8.1"
dask = { extras = ["bag"], version = ">=2021.1.0" }
h5py = ">=3.1.0"
pandas = ">=1.2.3"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.1"
jupyter = ">=1.0.0"
jupyterlab = ">=3.0.12"
jupytext = ">=1.7.1"
black = ">=20.8b1"
flake8 = ">=3.9.0"
mypy = ">=0.812"
pydocstyle = ">=6.0.0"
isort = ">=5.8.0"
jupyterlab-code-formatter = ">=1.4.10"
Sphinx = ">=4.0.2"
sphinx-rtd-theme = ">=0.5.2"
coverage = ">=5.5"
pytest-cov = ">=2.12.1"
pre-commit = ">=2.14.0"

[tool.poetry.scripts]
isingchat = "isingchat.cli:main"

[tool.black]
line-length = 79
target-version = ["py37", "py38"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
profile = "black"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
parallel = true
branch = true
source = ["isingchat"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
